# 3dgs-phoenix

./: .gitignore  HANDOFF.md  HANDOFF_CESIUM_NATIVE.md  INSTALL.md  handover_notes.md  implementation_plan.md
.pipeline/diagnostics/: repro_payload_2026-07-08T12-12-52-594101Z.json  repro_payload_2026-07-08T13-18-27-718705Z.json  repro_payload_2026-07-08T13-25-48-622669Z.json  repro_payload_2026-07-08T13-26-28-284987Z.json  repro_payload_2026-07-08T13-26-35-889378Z.json  repro_payload_2026-07-08T13-31-57-605201Z.json  repro_payload_2026-07-08T13-32-10-063682Z.json
.pipeline/logical-ui/: codebase_rules.json
.pipeline/profiles/: macos.md
app_flutter/: pubspec.yaml
app_flutter/lib/: main.dart
app_flutter/shaders/: atmosphere.frag  globe.frag
app_unreal/: MAINMAP_INSTRUCTIONS.md  README.md  cesium_daemon.uproject
app_unreal/Config/: DefaultEngine.ini
app_unreal/Source/: cesium_daemon.Target.cs  cesium_daemonEditor.Target.cs
cesium_native_bridge/: CMakeLists.txt
cesium_native_bridge/include/: bridge.h
cesium_native_bridge/src/: bridge.cpp
docs/architecture/: Architecture-spec-Cross-Platform-Rendering-and-WebAssembly.md
docs/designs/: cesium-native-flutter-3d-blueprint.md  feat-251-solution.md  feat-255-solution.md  uml-graphics-and-wasm-extensibility.md
docs/epics/: epic-01-3d-visualization.md  epic-01-scene-lifecycle.md  epic-02-3d-visualization.md  epic-02-scene-lifecycle.md  epic-03-gpu-bridge.md  epic-04-wasm-extensibility.md
docs/features/: feat-01-native-3d-network-visualization.md  feat-02-3d-terrain-elevation-and-node-altitude-modeling.md  feat-12-yang-compiler.md  feat-13-zero-codegen-grid.md  feat-14-event-echo-guard.md  feat-15-off-thread-telemetry.md  feat-16-gpu-topology.md  feat-44-downstream-baseline.md  feat-45-isolated-scene-boot.md  feat-46-headless-orchestration.md  feat-47-windows-dxgi-interop.md  feat-48-macos-iosurface-interop.md  feat-49-linux-vulkan-interop.md  feat-50-wasm-extensibility.md
docs/use-cases/: uc-45-open-multi-node.md  uc-46-rendering-crash-recovery.md  (+1 more)
scripts/: iosurface_check.c  package_app.sh  verify_daemon_rendering.sh
(+77 files in other folders)
